--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 script:
   - mkdir -p build/logs
   - php vendor/bin/phpcs --standard=ruleset.xml src
-  - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+  - php vendor/bin/phpunit --testdox
 
 after_script:
   - php vendor/bin/php-coveralls -v
