--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "ankitjain28may/prettysize",
     "description": "Convert bytes to other sizes for prettier logging",
     "type": "library",
+    "keywords": ["php", "Utility", "PrettySize"],
     "license": "MIT",
     "authors": [
         {
@@ -17,6 +18,8 @@
         "php-coveralls/php-coveralls": "^2.1",
         "squizlabs/php_codesniffer": "^3.3"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Ankitjain28may\\Prettysize\\": "src/"
