--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 
 script:
   - mkdir -p build/logs
-  - php vendor/bin/phpcs --standard=ruleset.xml src
+  - php vendor/bin/phpcs --standard=ruleset.xml src tests
   - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
