--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ language: php
 php:
   - 7.1
   - 7.2
+  - 7.3
 
 before_install:
-  - composer install --dev --ignore-platform-reqs
+  - composer install
 
 script:
   - mkdir -p build/logs
